deploy-chain-0/service-fe.yaml
apiVersion: v1
kind: Service
metadata:
  name: polkadotjs
spec:
  selector:
    app: polkadotjs
  ports:
    - name: web
      protocol: TCP
      port: 8000
      targetPort: web
